# rustex

./: README.md
src/: Cargo.toml
src/labs/simpleconsole/: Cargo.toml
src/labs/simpleconsole/src/: main.rs
src/labs/webapi/: Cargo.toml  README.md
src/labs/webapi/accel/: docker-compose-quickwit.yml  quickcheck.http
src/labs/webapi/src/: flex_db_api.rs  main.rs  opentel.rs  webapi_app_state.rs
